@@ -10,13 +10,9 @@ import java.util.logging.Level;
  *
  * @author Tadaya Tsuyukubo
  * @see net.ttddyy.dsproxy.support.CommonsQueryCountLoggingServletFilter
- * @see net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor
  * @see net.ttddyy.dsproxy.support.JULQueryCountLoggingServletFilter
- * @see net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor
  * @see net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingServletFilter
- * @see net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  * @see net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingServletFilter
- * @see net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  * @since 1.3
  */
 public class QueryCountLoggerBuilder {
@@ -90,33 +86,6 @@ public class QueryCountLoggerBuilder {
         return filter;
     }
 
-    /**
-     * Build {@link net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor}.
-     *
-     * @return query-count-logger using commons
-     */
-    public CommonsQueryCountLoggingHandlerInterceptor buildCommonsHandlerInterceptor() {
-        return buildCommonsHandlerInterceptor(null);
-    }
-
-    /**
-     * Build {@link net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor}.
-     *
-     * @param logLevel commons log level
-     * @return query-count-logger using commons
-     */
-    public CommonsQueryCountLoggingHandlerInterceptor buildCommonsHandlerInterceptor(CommonsLogLevel logLevel) {
-        if (logLevel != null) {
-            this.commonsLogLevel = logLevel;
-        }
-
-        CommonsQueryCountLoggingHandlerInterceptor handlerInterceptor = new CommonsQueryCountLoggingHandlerInterceptor();
-        if (this.commonsLogLevel != null) {
-            handlerInterceptor.setLogLevel(this.commonsLogLevel);
-        }
-        handlerInterceptor.setWriteAsJson(this.writeAsJson);
-        return handlerInterceptor;
-    }
 
     /**
      * Build {@link net.ttddyy.dsproxy.support.JULQueryCountLoggingServletFilter}.
@@ -149,37 +118,6 @@ public class QueryCountLoggerBuilder {
     }
 
     /**
-     * Build {@link net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor}.
-     *
-     * @return query-count-logger using Java Util Logging
-     * @since 1.4.2
-     */
-    public JULQueryCountLoggingHandlerInterceptor buildJULHandlerInterceptor() {
-        return buildJULHandlerInterceptor(null);
-    }
-
-    /**
-     * Build {@link net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor}.
-     *
-     * @param logLevel commons log level
-     * @return query-count-logger using Java Util Logging
-     * @since 1.4.2
-     */
-    public JULQueryCountLoggingHandlerInterceptor buildJULHandlerInterceptor(Level logLevel) {
-        if (logLevel != null) {
-            this.julLogLevel = logLevel;
-        }
-
-        JULQueryCountLoggingHandlerInterceptor handlerInterceptor = new JULQueryCountLoggingHandlerInterceptor();
-        if (this.julLogLevel != null) {
-            handlerInterceptor.setLogLevel(this.julLogLevel);
-        }
-        handlerInterceptor.setWriteAsJson(this.writeAsJson);
-        return handlerInterceptor;
-    }
-
-
-    /**
      * Build {@link net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingServletFilter}.
      *
      * @return query-count-logger using slf4j
@@ -208,34 +146,6 @@ public class QueryCountLoggerBuilder {
     }
 
     /**
-     * Build {@link net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor}.
-     *
-     * @return query-count-logger using slf4j
-     */
-    public SLF4JQueryCountLoggingHandlerInterceptor buildSlf4jHandlerInterceptor() {
-        return buildSlf4jHandlerInterceptor(null);
-    }
-
-    /**
-     * Build {@link net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor}.
-     *
-     * @param logLevel slf4j log level
-     * @return query-count-logger using slf4j
-     */
-    public SLF4JQueryCountLoggingHandlerInterceptor buildSlf4jHandlerInterceptor(SLF4JLogLevel logLevel) {
-        if (logLevel != null) {
-            this.slf4jLogLevel = logLevel;
-        }
-
-        SLF4JQueryCountLoggingHandlerInterceptor handlerInterceptor = new SLF4JQueryCountLoggingHandlerInterceptor();
-        if (this.slf4jLogLevel != null) {
-            handlerInterceptor.setLogLevel(this.slf4jLogLevel);
-        }
-        handlerInterceptor.setWriteAsJson(this.writeAsJson);
-        return handlerInterceptor;
-    }
-
-    /**
      * Build {@link net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingServletFilter}.
      *
      * @return query-count-logger using system.out
@@ -245,17 +155,6 @@ public class QueryCountLoggerBuilder {
         filter.setWriteAsJson(this.writeAsJson);
         return filter;
 
-    }
-
-    /**
-     * Build {@link net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor}.
-     *
-     * @return query-count-logger using system.out
-     */
-    public SystemOutQueryCountLoggingHandlerInterceptor buildSysOutHandlerInterceptor() {
-        SystemOutQueryCountLoggingHandlerInterceptor handlerInterceptor = new SystemOutQueryCountLoggingHandlerInterceptor();
-        handlerInterceptor.setWriteAsJson(this.writeAsJson);
-        return handlerInterceptor;
     }
 
 }
